[gd_scene load_steps=2 format=3 uid="uid://24t5e1imin60"]

[ext_resource type="Script" uid="uid://d3wwu3nqktare" path="res://Assets/Scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.168627, 0.168627, 0.156862, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_top = 32.0
text = "Game"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BtnPlay" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Novo Jogo"

[node name="BtnContinue" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Continuar"

[node name="BtnOptions" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Opções"

[node name="BtnCredits" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Créditos"

[node name="BtnQuit" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Sair"
